sample_data/000/000c03fb7fa609e2c706f276d9febc6a4a813eca
libtool: compile:  armv6l-unknown-linux-musleabihf-g++ -O2 -g -I/nix/store/ckvcs810fx963jkmb98c7427isf4503m-musl-1.1.20-armv6l-unknown-linux-musleabihf-dev/include -B/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-l\
inux-musleabihf/lib/ -idirafter /nix/store/ckvcs810fx963jkmb98c7427isf4503m-musl-1.1.20-armv6l-unknown-linux-musleabihf-dev/include -idirafter /nix/store/rcgzcsqxl9fs0v3rfgrywpr73hyq07rw-armv6l-unknown-linux-musleabihf-stage-final-gcc-deb\
ug-7.3.0/lib/gcc/armv6l-unknown-linux-musleabihf/7.3.0/include-fixed -Wl,-rpath,/nix/store/hbyc5vm8v5n9xx9z8dg5cys517dx37zv-gcc-debug-8.2.0-armv6l-unknown-linux-musleabihf-lib/lib -Wl,-L/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1\
.20-armv6l-unknown-linux-musleabihf/lib -Wl,-rpath -Wl,/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabihf/lib -Wl,-L/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabi\
hf/lib -I/build/gcc-8.2.0/libstdc++-v3/../libgcc -I/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/armv6l-unknown-linux-musleabihf -I/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include -I/build/gcc-8.2.0/li\
bstdc++-v3/libsupc++ -D_GLIBCXX_SHARED -fno-implicit-templates -Wall -Wextra -Wwrite-strings -Wcast-qual -Wabi -fdiagnostics-show-location=once -ffunction-sections -fdata-sections -frandom-seed=bad_cast.lo -O2 -g -I/nix/store/ckvcs810fx96\
3jkmb98c7427isf4503m-musl-1.1.20-armv6l-unknown-linux-musleabihf-dev/include -B/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabihf/lib/ -idirafter /nix/store/ckvcs810fx963jkmb98c7427isf4503m-musl-1.1.20\
-armv6l-unknown-linux-musleabihf-dev/include -idirafter /nix/store/rcgzcsqxl9fs0v3rfgrywpr73hyq07rw-armv6l-unknown-linux-musleabihf-stage-final-gcc-debug-7.3.0/lib/gcc/armv6l-unknown-linux-musleabihf/7.3.0/include-fixed -Wl,-rpath,/nix/st\
ore/hbyc5vm8v5n9xx9z8dg5cys517dx37zv-gcc-debug-8.2.0-armv6l-unknown-linux-musleabihf-lib/lib -Wl,-L/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabihf/lib -Wl,-rpath -Wl,/nix/store/8s964jlvildzi65fbj155\
djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabihf/lib -Wl,-L/nix/store/8s964jlvildzi65fbj155djhr6nf4ggz-musl-1.1.20-armv6l-unknown-linux-musleabihf/lib -c ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/bad_cast.cc  -fPIC -DPIC -D_GLIB\
CXX_SHARED -o bad_cast.o
In file included from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/move.h:55:0,
                 from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/nested_exception.h:40,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/exception:144,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/new:40,
                 from ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/bad_array_new.cc:24:
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: error: there are no arguments to '__is_constructible' that depend on a template parameter, so a declaration of '__is_constructible' must be available [-\
fpermissive]
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                ^~~~~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:65: error: template argument 1 is invalid
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                                                 ^
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:32: error: there are no arguments to '__is_assignable' that depend on a template parameter, so a declaration of '__is_assignable' must be available [-fperm\
issive]
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                ^~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:57: error: template argument 1 is invalid
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                                         ^
In file included from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/move.h:55:0,
                 from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/nested_exception.h:40,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/exception:144,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/new:40,
                 from ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/bad_array_length.cc:24:
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: error: there are no arguments to '__is_constructible' that depend on a template parameter, so a declaration of '__is_constructible' must be available [-\
fpermissive]
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                ^~~~~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:65: error: template argument 1 is invalid
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                                                 ^
In file included from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/move.h:55:0,
                 from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/nested_exception.h:40,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/exception:144,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/new:40,
                 from ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/atexit_thread.cc:26:
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: error: there are no arguments to '__is_constructible' that depend on a template parameter, so a declaration of '__is_constructible' must be available [-\
fpermissive]
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                ^~~~~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:65: error: template argument 1 is invalid
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                                                 ^
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:32: error: there are no arguments to '__is_assignable' that depend on a template parameter, so a declaration of '__is_assignable' must be available [-fperm\
issive]
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                ^~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:57: error: template argument 1 is invalid
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                                         ^
In file included from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/move.h:55:0,
                 from /build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/bits/nested_exception.h:40,
                 from /build/gcc-8.2.0/libstdc++-v3/libsupc++/exception:144,
                 from ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/new:40,
                 from ../../../../gcc-8.2.0/libstdc++-v3/libsupc++/bad_alloc.cc:26:
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: error: there are no arguments to '__is_constructible' that depend on a template parameter, so a declaration of '__is_constructible' must be available [-\
fpermissive]
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                ^~~~~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:32: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:921:65: error: template argument 1 is invalid
       : public __bool_constant<__is_constructible(_Tp, _Args...)>
                                                                 ^
                                                         ^
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:32: error: there are no arguments to '__is_assignable' that depend on a template parameter, so a declaration of '__is_assignable' must be available [-fperm\
issive]
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                ^~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:57: error: template argument 1 is invalid
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                                         ^
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:32: error: there are no arguments to '__is_assignable' that depend on a template parameter, so a declaration of '__is_assignable' must be available [-fperm\
issive]
       : public __bool_constant<__is_assignable(_Tp, _Up)>
                                ^~~~~~~~~~~~~~~
/build/build/armv6l-unknown-linux-musleabihf/libstdc++-v3/include/type_traits:1049:57: error: template